# mentoring

./: .gitignore  pyproject.toml
src/: config_main.yaml  main.py
src/config/: config_main.yaml
src/config/data_loading/: data_load.yaml
src/config/data_processing/: data_processing.yaml
