[tool.poetry]
name = "lesson1-example-hydra-dvc"
version = "0.1.0"
description = ""
authors = ["anuar.shakirov <anuar.shakirov@aramcoinnovations.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
dvc = {extras = ["ssh"], version = "^3.56.0"}
pandas = "^2.2.3"
openpyxl = "^3.1.5"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
